@@ -16,7 +16,7 @@ export const MAX_SILO_UPGRADES = 15;
 export const MAX_ITEMS_IN_FAIR_PER_USER = 6;
 export const MAXIMUM_PRICE_TO_SELL_IN_FAIR = 1.5;
 export const MINIMUM_PRICE_TO_SELL_IN_FAIR = 0.65;
-export const MAX_ITEMS_PER_FAIR_PAGE = 20;
+export const MAX_ITEMS_PER_FAIR_PAGE = process.env.NODE_ENV === 'production' ? 20 : 1;
 
 export const DELIVERIES_AMOUNT = 6;
 export const MAX_DELIVERY_WEIGHT = 9;
@@ -27,12 +27,12 @@ export const FINISH_ALL_DELIVERIES_BONUS = 30_000;
 export const QUALITY_PRICE_MULTIPLIER = 30 / 100;
 
 export const PLANTATION_WEIGHT_MODIFIERS = {
-  BASE_MIN_VALUE: 0.8,
-  BASE_MAX_VALUE: 1.4,
+  BASE_MIN_VALUE: 0.7,
+  BASE_MAX_VALUE: 1.3,
   BEST_SEASON_BUFF: 0.3,
   WORST_SEASON_DEBUFF: 0.2,
-  FERTILIZER_MAX_BUFF: 0.5,
-  FERTILIZER_MIN_BUFF: 0.3,
+  FERTILIZER_MAX_BUFF: 0.4,
+  FERTILIZER_MIN_BUFF: 0.2,
 };
 
 export const PLANTATION_HARVEST_MODIFIERS = {
