@@ -20,6 +20,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - O `/fazendinha silo` foi atualizado para os novos componentes V2 do Discord.
 - O `/fazendinha administrar campos` foi atualizado para os novos componentes V2 do Discord. Agora também é possível aumentar o silo por este comando.
 - O `/fazendinha entregas` foi atualizado para os novos componentes V2 do Discord.
+- O `/fazendinha feira comprar` foi atualizado para os novos componentes V2 do Discord.
 - O `/loja comprar sementes` foi atualizado para os novos componentes V2 do Discord.
 - A planta `Tomate` foi renomeada para `Feijão`.
 - A planta `Banana` foi renomeada para `Cebola`.
